--- a/README
+++ b/README
@@ -5,7 +5,11 @@
    py -3 -m venv .venv
 
    perintah ke 2.
+   windows:
    .venv\Scripts\activate
+
+   GNU/Linux:
+   . .venv/bin/activate
 
 
 2. pemasangan library
